@@ -1,9 +1,3 @@
-need to copy test from old job_copy to make sure the start_on and stop_on
-members are copied for job_new
-
-job_new might just take one argument?  either combined parent/config or it
-won't add itself to the config
-
 event operators should unblock and unref in their destroy function
 then we can get rid of the need to do it in the job
 
